Complete Bible reading plan feature with improved UI
- Add final NT shuffle for additional randomness before flattening
- Return book names as strings from API for simplified frontend handling
- Replace ordered list with plain divs for easy copy/paste printing
- Clean up test output and code formatting

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>